<resources>
    <string name="app_name">NextGenGI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About </string>
    <string name="action_picture">Take Picture</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Search</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search Clone</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Look-Up Clone With Search Bar</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- strings on detail activity. -->
    <string name="clone">Clone</string>
    <string name="syn1">Synonym 1</string>
    <string name="syn2">Synonym 2</string>
    <string name="index">Yield Potential(t/ha)</string>
    <string name="cluster">Dry Matter Content(%)</string>
    <string name="group">CMD Rating</string>
    <string name="ped">Pedigree</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sele">Selection Site</string>
    <string name="release">Year Of Release</string>
    <string name="chara">Characteristics</string>
    <string name="additional">Additional Properties</string>

    <string name="cloneimage">Clone Image</string>
    <string name="expanded">Expanded Clone Image</string>
    <string name="title_activity_glossary">glossary</string>
    <string name="title_activity_key">key</string>

</resources>
